# handmadehero

./: README.md  meson.build  meson_options.txt  watchlist.md
.github/workflows/: compile.yml  test.yml
include/handmadehero/: analysis.h  assert.h  asset.h  asset_type_id.h  atomic.h  audio.h  color.h  debug.h  entity.h  errors.h  fileformats.h  handmadehero.h  math.h  memory_arena.h  platform.h  random.h  render_group.h  sim_region.h  text.h  tile.h  types.h  world.h
protocol/: meson.build
script/: extract_art  latest_ci  watch
src/: debug.c  handmadehero.c  handmadehero_asset.c  handmadehero_audio.c  handmadehero_entity.c  handmadehero_linux.c  handmadehero_memory_arena.c  handmadehero_render_group.c  handmadehero_sim_region.c  handmadehero_tile.c  handmadehero_world.c  joystick_linux.c  joystick_linux.h  random.c  rdtsc.asm
test/: math_test.c  meson.build  text_test.c
tool/: meson.build
tool/hh_asset_builder/: main.c
tool/hh_record_read/: main.c
